--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Updated at least once a month<br>Leagues subject to change as lined out in Terms
         • Under DataMB pro, press "Renew, Upgrade or Update Billing"<br>
         • Choose "Cancel Subscription"<br>
         • Press "Save & Continue"<br>
-        • Your subscription should now be cancelled and you will not be charged for the next billing cycle<br>
+        • Your subscription will be cancelled immediately and you will not be charged for the next billing cycle<br>
         • There will be no refunds for current billing cycles, as lined out in the Terms and Conditions</p>
 </div>
 <br>
@@ -310,7 +310,7 @@ Updated at least once a month<br>Leagues subject to change as lined out in Terms
         <!-- Cancellation and Refunds -->
         <h3>Cancellation and Refunds</h3>
         <p>
-            4.1 You have the right to cancel your DataMB Pro subscription at any time. The cancellation will take effect at the end of the current billing cycle.
+            4.1 You have the right to cancel your DataMB Pro subscription at any time. The cancellation will take effect immediately: you will lose access to the platform and you will not be billed for the next cycle.
         </p>
         <p>
             4.2 Refunds for cancellations will not be provided for any remaining unused days in the billing cycle.
