--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ font-size: 21px
             • Plots : 1000 (GK), 1250 (CB), 1250 (FB), 1700 (CM), 1600 (FW), 1100 (ST)</p>
     
 
-Updated at least once a month<br>2023/24 will be added to radar database and replace search and plot databases during the first international break<br><br>
+- Updated at least once a month<br>- 2023/24 will be added to radar database and replace search and plot databases during the first international break<br><br>
 </div>
 <br>
 
@@ -301,13 +301,13 @@ Updated at least once a month<br>2023/24 will be added to radar database and rep
 
     <h3>The Platform</h3>
     <p>
-        2.1 Radar tool :<br><br>Minimum 1000 minutes<br>2 seasons and counting<br>2020/21 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>2022/23 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>Subsequent seasons : Data for a new season will only be added after enough games have been played (roughly the first international break); for the same leagues as 2022/23<br>7 metrics for each position
+        2.1 Radar tool :<br><br>- Minimum 1000 minutes<br>- 2 seasons and counting<br>- 2020/21 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 2022/23 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- Subsequent seasons : Data for a new season will only be added after enough games have been played (roughly the first international break); for the same leagues as 2022/23<br>- 7 metrics for each position
     </p>
     <p>
-      2.2 Search tool :<br><br>Minimum 1000 minutes<br>1 season (current season only, replaced every year)<br>Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>7 metrics for each position
+      2.2 Search tool :<br><br>- Minimum 1000 minutes<br>- 1 season (current season only, replaced every year)<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 7 metrics for each position
   </p>
   <p>
-    2.3 Plot tool :<br><br>Minimum 1700 minutes (or lower depending on position)<br>1 season (current season only, replaced every year)<br>Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>30+ metrics for each position
+    2.3 Plot tool :<br><br>- Minimum 1700 minutes (or lower depending on position)<br>1 season (current season only, replaced every year)<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 30+ metrics for each position
 </p>
 
 <p>2.4 Updates : Data will be updated at least once a month.
