--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ font-size: 21px
       2.2 Search tool :<br><br>- Minimum 1000 minutes<br>- 1 season (current season only, replaced every year)<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 7 metrics for each position
   </p>
   <p>
-    2.3 Plot tool :<br><br>- Minimum 1700 minutes (or lower depending on position)<br>1 season (current season only, replaced every year)<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 30+ metrics for each position
+    2.3 Plot tool :<br><br>- Minimum 1700 minutes (or lower depending on position)<br>- 1 season (current season only, replaced every year)<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 30+ metrics for each position
 </p>
 
 <p>2.4 Updates : Data will be updated at least once a month.
