--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.75, user-scalable=no"">
+	<meta name="robots" content="noindex">
 
     <style>
   /* Style anchor elements within h3 tags */
