--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Updated 06.08.2023</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Updated 08.09.2023</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
@@ -245,17 +245,17 @@ font-size: 21px
         • Plots : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹</p>
 
     <h3>Seasons</h3>
-    <p>• Radars : 2021/22 (Top 7 Leagues) + 2022/23 📅<br>
-        • Search : 2022/23 📅<br>
-        • Plots : 2022/23 📅</p>
+    <p>• Radars : 2021/22 (Top 7 Leagues) + 2022/23 + 2023/24 📅<br>
+        • Search : 2022/23 + 2023/24 📅<br>
+        • Plots : 2022/23 + 2023/24 📅</p>
 
         <h3>Minutes</h3>
-        <p>• Radars : 1000<br>
-            • Search : 1000<br>
-            • Plots : 1000 (GK), 1250 (CB), 1250 (FB), 1700 (CM), 1600 (FW), 1100 (ST)</p>
+        <p>• 2021/22 : minimum 1000 minutes<br>
+            • 2022/23 : minimum 1000 minutes (may be higher for plots)<br>
+            • 2023/24 : minimum 200 minutes</p>
     
 
-- Updated at least once a month<br>- 2023/24 will be added to radar database and replace search and plot databases during the first international break<br><br>
+- Top 7 League radars updated weekly<br>- Other leagues, plots and search updated monthly<br><br>
 </div>
 <br>
 
@@ -302,13 +302,13 @@ font-size: 21px
 
     <h3>The Platform</h3>
     <p>
-        2.1 Radar tool :<br><br>- Minimum 1000 minutes<br>- 2 seasons and counting<br>- 2020/21 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 2022/23 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- Subsequent seasons : Data for a new season will only be added after enough games have been played (roughly the first international break); for the same leagues as 2022/23<br>- 7 metrics for each position
+        2.1 Radar tool :<br><br>- 2021/22, 2022/23, 2023/24<br>- 2021/22 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 2022/23 & 2023/24 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
     </p>
     <p>
-      2.2 Search tool :<br><br>- Minimum 1000 minutes<br>- 1 season (current season only, replaced every year)<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 7 metrics for each position
-  </p>
+      2.2 Search tool :<br><br>- 2022/23, 2023/24<br>>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
+    </p>
   <p>
-    2.3 Plot tool :<br><br>- Minimum 1700 minutes (or lower depending on position)<br>- 1 season (current season only, replaced every year)<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- Subsequent seasons : Data for a new season will REPLACE after enough games have been played (roughly the first international break)<br>- 30+ metrics for each position
+    2.3 Plot tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 30+ metrics for each position
 </p>
 
 <p>2.4 Updates : Data will be updated at least once a month.
