--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ font-size: 21px
         • Plots : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹</p>
 
     <h3>Seasons</h3>
-    <p>• Radars : 2021/22 (Top 7 Leagues) + 2022/23 + 2023/24 📅<br>
+    <p>• Radars : 2021/22 (Top 7 League) + 2022/23 + 2023/24 📅<br>
         • Search : 2022/23 + 2023/24 📅<br>
         • Plots : 2022/23 + 2023/24 📅</p>
 
