--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Updated 06.10.2023</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Updated 13.10.2023</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
@@ -252,10 +252,10 @@ font-size: 21px
         <h3>Minutes</h3>
         <p>• 2021/22 : minimum 1000 minutes<br>
             • 2022/23 : minimum 1000 minutes (may be higher for plots)<br>
-            • 2023/24 : minimum 200 minutes</p>
+            • 2023/24 : minimum 250 minutes</p>
     
 
-- Top 7 League radars updated weekly<br>- Other leagues, plots and search updated monthly<br><br>
+- Top 7 League radars and plots updated weekly<br>- Other leagues and search tool updated monthly<br><br>
 </div>
 <br>
 
