--- a/index.html
+++ b/index.html
@@ -191,6 +191,21 @@ font-size: 21px
             display: none;
         }
 
+	        .welcome-text {
+  font-size: 20px;
+  color: #F1F1F1;
+  text-align: center;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+
+  /* Add more styling as needed */
+}
+
+.welcome-text a {
+  color: #F2F2F2;
+
+  /* Add more styling as needed */
+}
+
     </style>
     <script>
         function toggleSection(sectionId) {
@@ -206,7 +221,12 @@ font-size: 21px
 <body>
    
 <br>
+<div class="welcome-text">
+  <p class="big">Welcome to DataMB Pro</p><br>
+  • Use the drop-down menu to select a tool •<br><br>
+  Early access to <a href="https://datamb.football/chat">DataMB Chat</a> Beta has been granted to all Pro subscribers<br>
 
+</div>
 
 <h1>
     <span onclick="toggleSection('guide-section')">Guide <span id="guide-button">+</span></span>
