--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ font-size: 21px
         }
 
 	        .welcome-text {
-  font-size: 20px;
+  font-size: 17px;
   color: #F1F1F1;
   text-align: center;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -222,9 +222,9 @@ font-size: 21px
    
 <br>
 <div class="welcome-text">
-  <p class="big">Welcome to DataMB Pro</p><br>
+  <p class="big">Welcome to DataMB Pro</p>
   • Use the drop-down menu to select a tool •<br><br>
-  Early access to <a href="https://datamb.football/chat">DataMB Chat</a> Beta has been granted to all Pro subscribers<br>
+  Early access to <a href="https://datamb.football/chat">DataMB Chat</a> Beta has been granted to all Pro subscribers<br><br><br>
 
 </div>
 
