--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ font-size: 21px
 <br>
 <div class="welcome-text">
   <p class="big">Welcome to DataMB Pro</p>
-  • Use the drop-down menu to select a tool •<br><br>
-  Early access to <a href="https://datamb.football/chat">DataMB Chat</a> Beta has been granted to all Pro subscribers<br><br><br>
+  • Use the drop-down menu to select a tool •
+  <br><br><br>
 
 </div>
 
