--- a/index.html
+++ b/index.html
@@ -260,22 +260,25 @@ font-size: 21px
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
-    <p>• Radars : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷 + Second Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷<br>
-        • Search : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷 + Second Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷<br>
-        • Plots : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹</p>
+    <p>• Radars, Index Scores, Search : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷 + Second Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷<br>
+        • Plots : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹<br>
+	• AI Chat : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷</p>
+
 
     <h3>Seasons</h3>
     <p>• Radars : 2021/22 (Top 7 League) + 2022/23 + 2023/24 📅<br>
+	• Plots : 2022/23 + 2023/24 📅<br>    
         • Search : 2022/23 + 2023/24 📅<br>
-        • Plots : 2022/23 + 2023/24 📅</p>
+	• Index Scores : 2023/24 📅<br>
+        • AI Chat : 2023/24 📅</p>
 
         <h3>Minutes</h3>
-        <p>• 2021/22 : minimum 1000 minutes<br>
-            • 2022/23 : minimum 1000 minutes (may be higher for plots)<br>
+        <p>• 2021/22 : minimum 1200 minutes<br>
+            • 2022/23 : minimum 1200 minutes<br>
             • 2023/24 : minimum 750 minutes</p>
     
 
-- Top 7 League radars and plots updated weekly<br>- Other leagues and search tool updated monthly<br><br>
+- Top 7 Leagues updated weekly<br>- Other leagues updated monthly<br><br>
 </div>
 <br>
 
@@ -317,23 +320,28 @@ font-size: 21px
         1.3 Subscription plans, usernames, emails and passwords are processed by MembershipWorks, and the user agrees to abide by their terms and conditions as applicable.
     </p>
         <p>
-        1.4 Subscription payments are processed by PayPal, and the user agrees to abide by their terms and conditions as applicable.
+        1.4 Subscription payments are processed by PayPal and Stripe, and the user agrees to abide by their terms and conditions as applicable.
     </p>
 
     <h3>The Platform</h3>
     <p>
-        2.1 Radar tool :<br><br>- 2021/22, 2022/23, 2023/24<br>- 2021/22 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 2022/23 & 2023/24 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
+        2.1 Radar Tool :<br><br>- 2021/22, 2022/23, 2023/24<br>- 2021/22 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 2022/23 & 2023/24 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
     </p>
     <p>
-      2.2 Search tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
+      2.2 Search Tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
     </p>
   <p>
-    2.3 Plot tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 30+ metrics for each position
+    2.3 Plot Tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 50+ metrics for each position
 </p>
-
-<p>2.4 Updates : Data will be updated at least once a month.
+    <p>
+      2.4 Performance Index Scores :<br><br>- 2023/24<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France
+    </p>	
+  <p>
+    2.5 Early Access to the DataMB AI Chat Beta :<br><br>- 2023/24<br>- Data Coverage (5 leagues) : First divisions in England, Spain, Italy, Germany, France
 </p>
-<p>2.5 Future : The leagues, seasons and metrics supported by DataMB Pro are subject to change; with more expected to come in each tool. More tools are also expected to release for Pro subscribers.
+<p>2.6 Updates : Data will be updated at least once a month.
+</p>
+<p>2.7 Future : The leagues, seasons and metrics supported by DataMB Pro are subject to change; with more expected to come in each tool. More tools are also expected to release for Pro subscribers.
 </p>
 
     <!-- User Account and Security -->
