--- a/index.html
+++ b/index.html
@@ -267,11 +267,8 @@ font-size: 21px
 
     <h3>Seasons</h3>
     <p>• Radars : 2021/22 (Top 7 League) + 2022/23 + 2023/24 📅<br>
-	• Plots : 2022/23 + 2023/24 📅<br>    
-        • Search : 2022/23 + 2023/24 📅<br>
-	• Index Scores : 2023/24 📅<br>
-        • AI Chat : 2023/24 📅</p>
-
+	• Plots, Search : 2022/23 + 2023/24 📅<br>    
+	• Index Scores, AI Chat : 2023/24 📅<br>
         <h3>Minutes</h3>
         <p>• 2021/22 : minimum 1200 minutes<br>
             • 2022/23 : minimum 1200 minutes<br>
