--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ font-size: 21px
     <p>• Bug reports?<br>
         • Questions?<br>
         • Suggestions?<br>
-    <p>📩   <a href="mailto:datamb.football@gmail.com">datamb.football@gmail.com</a><br>🐦 <a href="https://twitter.com/ohlitmybad"> @ohlitmybad</a> on Twitter</p>
+    <p>📩   <a href="mailto:datamb.football@gmail.com">datamb.football@gmail.com</a><br>🐦 <a href="https://twitter.com/datamb_"> @DataMB_</a> on Twitter</p>
 </div>
 <br><br>
 
