--- a/index.html
+++ b/index.html
@@ -256,23 +256,23 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Fully updated 02.04.2024</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Fully updated 16.04.2024</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
     <p>• Radars, Index Scores, Search : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷 + Second Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷<br>
-        • Plots : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹<br>
+        • Plots, Rank : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹<br>
 	• AI Chat : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷</p>
 
 
     <h3>Seasons</h3>
     <p>• Radars : 2021/22 (Top 7 League) + 2022/23 + 2023/24 📅<br>
 	• Plots, Search : 2022/23 + 2023/24 📅<br>    
-	• Index Scores, AI Chat : 2023/24 📅<br>
+	• Index Scores, Rank, AI Chat : 2023/24 📅<br>
         <h3>Minutes</h3>
         <p>• 2021/22 : minimum 1200 minutes<br>
             • 2022/23 : minimum 1200 minutes<br>
-            • 2023/24 : minimum 800 minutes</p>
+            • 2023/24 : minimum 820 minutes</p>
     
 
 - Top 7 Leagues updated weekly<br>- Other leagues updated monthly<br><br>
