--- a/index.html
+++ b/index.html
@@ -248,9 +248,14 @@ font-size: 21px
         • Searched player will be circled in pink<br>
         • Click on the toggle to show the median lines<br>
         • Once you've selected a league, the search bar will not work for other leagues unless you refresh<br>
-        • Data from WyScout</p>
+        • Based on WyScout data</p>
 
-
+    <h3>Rank</h3>
+    <p>• Choose a player<br>
+        • Choose a sample to compare him with<br>
+        • Click on the blue toggle to go from Per 90 to Total<br>
+        • Click on the green toggle to go from Ascending to Default<br>
+        • Based on WyScout data</p>
 
     <h3><a href="http://datamb.football/glossary">Link to metrics glossary</a></h3>
 </div>
