--- a/index.html
+++ b/index.html
@@ -258,23 +258,23 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Fully updated 16.04.2024</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Fully updated 30.04.2024</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
-    <p>• Radars, Index Scores, Search : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷 + Second Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷<br>
-        • Plots, Rank : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹<br>
-	• AI Chat : First Division 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷</p>
+    <p>• First Division : 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷<br>
+        • Second Division : 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷</p>
 
 
     <h3>Seasons</h3>
-    <p>• Radars : 2021/22 (Top 7 League) + 2022/23 + 2023/24 📅<br>
-	• Plots, Search : 2022/23 + 2023/24 📅<br>    
-	• Index Scores, Rank, AI Chat : 2023/24 📅<br>
+    <p>• Radars : 2021/22 (Top 7) + 2022/23 + 2023/24 <br>
+	• Plots : 2022/23 (Top 7) + 2023/24<br>    
+	• Search : 2022/23 + 2023/24<br>    
+	• Index Scores, Rank, AI Chat : 2023/24<br>
         <h3>Minutes</h3>
         <p>• 2021/22 : minimum 1200 minutes<br>
             • 2022/23 : minimum 1200 minutes<br>
-            • 2023/24 : minimum 820 minutes</p>
+            • 2023/24 : minimum 900 minutes</p>
     
 
 - Top 7 Leagues updated weekly<br>- Other leagues updated monthly<br><br>
@@ -287,14 +287,14 @@ font-size: 21px
 </h1>
 <div id="account-section" class="terms hidden">
     <h3>Change your password</h3>
-    <p>• Head to 'Manage Account' in the tool drop-down<br>
+    <p>• Click on 'Manage Account'<br>
         • Under password, press "Change"<br>
         • Press "Save & Continue"<br>
         • Press "Save & Continue" again<br>
         • Your password should now have updated</p>
 
     <h3>Unsubscribe</h3>
-    <p>• Head to 'Manage Account' in the tool drop-down<br>
+    <p>• Click on 'Manage Account'<br>
         • Under DataMB pro, press "Renew, Upgrade or Update Billing"<br>
         • Choose "Cancel Subscription"<br>
         • Press "Save & Continue"<br>
@@ -324,23 +324,80 @@ font-size: 21px
 
     <h3>The Platform</h3>
     <p>
-        2.1 Radar Tool :<br><br>- 2021/22, 2022/23, 2023/24<br>- 2021/22 Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 2022/23 & 2023/24 Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
-    </p><br>
-    <p>
-      2.2 Search Tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France<br>- 7 metrics for each position
-    </p><br>
+      2.1 Free platform :
+      <ul><br>LEAGUES<br><br>
+          <li>England Premier League</li>
+          <li>Spain La Liga</li>
+          <li>Italy Serie A</li>
+          <li>Germany Bundesliga</li>
+          <li>France Ligue 1</li>
+          <li>Netherlands Eredivisie</li>
+          <li>Portugal Liga Primeira</li>
+      </ul>
+      <br>
+      <!-- FREE TOOLS -->
+     
+      <ul>TOOLS<br><br>
+          <li>Player and team profiles<br>2023/24</li>
+          <li>Player and team radars<br>2023/24<br>2022/23</li>
+          <li>Team plots<br>2023/24</li>
+      </ul></p></br>
   <p>
-    2.3 Plot Tool :<br><br>- 2022/23, 2023/24<br>- Data Coverage (7 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal<br>- 50+ metrics for each position
-</p><br>
-    <p>
-      2.4 Performance Index Scores :<br><br>- 2023/24<br>- Data Coverage (31 leagues) : First divisions in England, Spain, Italy, Germany, France, Netherlands, Portugal, Austria, Belgium, Turkey, Scotland, Saudi Arabia, United States, Mexico, Switzerland, Denmark, Norway, Sweden, Serbia, Czech Republic, Croatia, Brazil, Argentina, Uruguay, Japan and Korea; second divisions in England, Spain, Italy, Spain and France
-    </p><br>	
-  <p>
-    2.5 Early Access to the DataMB AI Chat Beta :<br><br>- 2023/24<br>- Data Coverage (5 leagues) : First divisions in England, Spain, Italy, Germany, France
+    2.2 Pro platform :
+    <ul><br>LEAGUES<br><br>
+      <li>England Premier League</li>
+      <li>Spain La Liga</li>
+      <li>Italy Serie A</li>
+      <li>Germany Bundesliga</li>
+      <li>France Ligue 1</li>
+      <li>Netherlands Eredivisie</li>
+      <li>Portugal Liga Primeira</li>
+      <li>Belgium Pro League</li>
+      <li>Scotland Premiership</li>
+      <li>Austria Bundesliga</li>
+      <li>Switzerland Super League</li>
+      <li>Denmark Superliga</li>
+      <li>Norway Eliteserien</li>
+      <li>Sweden Allsvenskan</li>
+      <li>Czech Republic Fortuna Liga</li>
+      <li>Serbia Superliga</li>
+      <li>Croatia HNL</li>
+      <li>Turkey Süper Lig</li>
+      <li>Saudi Pro League</li>
+      <li>Japan J1 League</li>
+      <li>Korea K-League 1</li>
+      <li>United States MLS</li>
+      <li>Mexico Liga MX</li>
+      <li>Brazil Serie A</li>
+      <li>Argentina Primera Division</li>
+      <li>Uruguay Primera Division</li>
+      <li>England Championship</li>
+      <li>Spain Segunda Division</li>
+      <li>Italy Serie B</li>
+      <li>Germany 2. Bundesliga</li>
+      <li>France Ligue 2</li>
+    </ul>
+    <br>
+    <!-- FREE TOOLS -->
+   
+    <ul>TOOLS<br><br>
+      <li>Player radars<br>2023/24<br>2022/23<br>2021/22 (Top 7)</li>
+      <li>Player plots<br>2023/24<br>2022/23 (Top 7)</li>
+      <li>Rank profile tool<br>2023/24</li>
+      <li>Attribute search tool<br>2023/24<br>2022/23</li>
+      <li>Performance index<br>2023/24</li>
+      <li>AI chat beta<br>2023/24 (Top 5)</li>
+
+    </ul><br>
+  
+      For leagues that run through the calendar year : 2022/23 refers to the 2022 season, 2023/24 to the 2023 season.<br>
+      The free team tools (radars and plots) are included ad-free in the Pro subscription.</p><br>
+  
+      <p>
+          2.3 App : The full suite of DataMB Pro tools are available in the mobile app.</p>
+<p>2.4 Updates : Data is updated every week, and fully up-to-date every month.
 </p>
-<p>2.6 Updates : Data will be updated at least once a month.
-</p>
-<p>2.7 Future : The leagues, seasons and metrics supported by DataMB Pro are subject to change; with more expected to come in each tool. More tools are also expected to release for Pro subscribers.
+<p>2.5 Future : The leagues, seasons and metrics supported by DataMB Pro are subject to change; with more expected to come in each tool. More tools are also expected to release for Pro subscribers.
 </p>
 
     <!-- User Account and Security -->
