--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ font-size: 21px
         9.2 Any dispute arising from or relating to these Terms and Conditions shall be subject to the exclusive jurisdiction of the courts in the French Republic.
     </p>
 
-    <h3>Privacy Polivy</h3>
+    <h3>Privacy Policy</h3>
 
     <a href="http://datamb.football/privacy">DataMB Privacy Policy</a>
      </p>
