--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@ font-size: 21px
 	• Plots : 2022/23 (Top 7) + 2023/24<br>    
 	• Search : 2022/23 + 2023/24<br>    
 	• Index Scores, Rank, AI Chat : 2023/24<br>
+	• For calendar year leagues, 2022/23 = 2022 season, etc.<br>
         <h3>Minutes</h3>
-        <p>• 2021/22 : minimum 1200 minutes<br>
-            • 2022/23 : minimum 1200 minutes<br>
+        <p> • 2022/23 : minimum 1200 minutes<br>
             • 2023/24 : minimum 900 minutes</p>
     
 
