--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Fully updated 30.04.2024</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 07.05.2024</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
@@ -277,7 +277,7 @@ font-size: 21px
             • 2023/24 : minimum 900 minutes</p>
     
 
-- Top 7 Leagues updated weekly<br>- Other leagues updated monthly<br><br>
+- Top 7 Leagues updated weekly<br>- Other leagues last updated on 30.04<br><br>
 </div>
 <br>
 
