--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@ font-size: 21px
         • Click on the green toggle to go from Ascending to Default<br>
         • Based on WyScout data</p>
 
+	    <h3>Index</h3>
+    <p>• Choose a metric<br>
+        • Filter by league and age<br>
+        • Click on the green toggle to go from Per 90 to Total<br>
+        • Based on WyScout data</p>
+
     <h3><a href="http://datamb.football/glossary">Link to metrics glossary</a></h3>
 </div>
 <br>
