--- a/index.html
+++ b/index.html
@@ -239,28 +239,24 @@ font-size: 21px
         • Click on a similar player to show his radar</p>
 
     <h3>Plots</h3>
-    <p>• Choose metrics and league (if needed)<br>
-        • Hover on circle to show information<br>
+    <p>• Hover on circle to display information<br>
         • Click on circle to print player name<br>
-        • Searched player will be circled in pink<br>
         • Click on the toggle to show the median lines<br>
-        • Once you've selected a league, the search bar will not work for other leagues unless you refresh<br>
-        • Based on WyScout data</p>
+        • Once you've selected a league, the search bar will not work for other leagues unless you refresh</p>
 
     <h3>Rank</h3>
     <p>• Choose a player<br>
         • Choose a sample to compare him with<br>
         • Click on the blue toggle to go from Per 90 to Total<br>
-        • Click on the green toggle to go from Ascending to Default<br>
-        • Based on WyScout data</p>
+        • Click on the green toggle to go from Ascending to Default</p>
 
 	    <h3>Index</h3>
     <p>• Choose a metric<br>
         • Filter by league and age<br>
-        • Click on the green toggle to go from Per 90 to Total<br>
-        • Based on WyScout data</p>
+        • Click on the green toggle to go from Per 90 to Total</p>
 
     <h3><a href="http://datamb.football/glossary">Link to metrics glossary</a></h3>
+	<p>Based on WyScout data</p>
 </div>
 <br>
 <h1>
