--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ font-size: 21px
         • Click on the green toggle to go from Per 90 to Total</p>
 
     <h3><a href="http://datamb.football/glossary">Link to metrics glossary</a></h3>
-	<p>Based on WyScout data</p>
+	Based on WyScout data
 </div>
 <br>
 <h1>
