--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ font-size: 21px
             • 2023/24 : minimum 920 minutes</p>
     
 
-- Top 7 Leagues updated weekly<br>- Other leagues last updated on 30.04<br><br>
+- Top 7 Leagues updated weekly. Other Leagues last updated on 30.04.2024<br>- Calendar year leagues 2024 coming next month<br>
 </div>
 <br>
 
