--- a/index.html
+++ b/index.html
@@ -224,7 +224,21 @@ font-size: 21px
 <br>
 
 </div>
+<h1>
+    <span onclick="toggleSection('news-section')">News <span id="news-button">+</span></span>
+</h1>
+<div id="news-section" class="terms hidden">
+    <h3>In-App Support</h3>
+    <p>DataMB Pro is now available on the iOS and Android application</p>
 
+
+    <h3>League Support</h3>
+    <p>DataMB Pro now supports all 31 leagues in every tool (excluding AI Chat)</p>
+
+    <h3>Index Update</h3>
+    <p>You can now display bar chart leaderboards for each of the 50+ metrics</p>
+</div>
+<br>
 <h1>
     <span onclick="toggleSection('guide-section')">Guide <span id="guide-button">+</span></span>
 </h1>
@@ -259,6 +273,7 @@ font-size: 21px
 	Based on WyScout data
 </div>
 <br>
+
 <h1>
     <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 14.05.2024</i>  <span id="database-button">+</span></span>
 </h1>
