--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ font-size: 21px
 <br>
 
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 21.05.2024</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 28.05.2024</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
@@ -289,11 +289,10 @@ font-size: 21px
 	• Search : 2022/23 + 2023/24<br>    
 	• Index Scores, Rank, AI Chat : 2023/24<br>
         <h3>Minutes</h3>
-        <p> • 2022/23 : minimum 1200 minutes<br>
-            • 2023/24 : minimum 1000 minutes</p>
+        <p> • Minimum 1000 minutes<br>
+            • Minimum 400 minutes for calendar season 2024</p>
     
 
-- Top 7 Leagues updated weekly. Other Leagues last updated on 02.05.2024<br>- Calendar year leagues 2024 coming next month<br>
 </div>
 <br>
 
