--- a/index.html
+++ b/index.html
@@ -228,9 +228,11 @@ font-size: 21px
     <span onclick="toggleSection('news-section')">News <span id="news-button">+</span></span>
 </h1>
 <div id="news-section" class="terms hidden">
+	 <h3>2024 🇧🇷🇺🇾🇯🇵🇰🇷🇺🇸🇳🇴🇸🇪</h3>
+    <p>Now available on all tools (400+ min)</p>
+	
     <h3>In-App Support</h3>
     <p>DataMB Pro is now available on the iOS and Android application</p>
-
 
     <h3>League Support</h3>
     <p>DataMB Pro now supports all 31 leagues in every tool (excluding AI Chat)</p>
