--- a/index.html
+++ b/index.html
@@ -267,8 +267,7 @@ font-size: 21px
         • Filter by league and age<br>
         • Click on the green toggle to go from Per 90 to Total</p>
 
-    <h3><a href="http://datamb.football/glossary">Link to metrics glossary</a></h3>
-	Based on WyScout data
+    <h3>Based on WyScout data</h3>
 </div>
 <br>
 
