--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ font-size: 21px
     <span onclick="toggleSection('news-section')">News <span id="news-button">+</span></span>
 </h1>
 <div id="news-section" class="terms hidden">
-	 <h3>2024 🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷🇺🇸🇳🇴🇸🇪</h3>
-    <p>Now available on all tools (400+ min)</p>
+	 <h3>New Leagues 🇨🇴🇨🇱🇪🇨🇵🇾🇬🇷🇮🇱🇺🇦🇷🇺🇵🇱</h3>
+    <p>Now available on all tools</p>
 	
     <h3>In-App Support</h3>
     <p>DataMB Pro is now available on the iOS and Android application</p>
@@ -254,7 +254,6 @@ font-size: 21px
     <p>• Hover on circle to display information<br>
         • Click on circle to print player name<br>
         • Click on the toggle to show the median lines<br>
-        • Once you've selected a league, the search bar will not work for other leagues unless you refresh</p>
 
     <h3>Rank</h3>
     <p>• Choose a player<br>
@@ -272,11 +271,11 @@ font-size: 21px
 <br>
 
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 17.06.2024</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 23.06.2024</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <h3>Leagues</h3>
-    <p>• First Division : 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷<br>
+    <p>• First Division : 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹🇦🇹🇧🇪🇹🇷🏴󠁧󠁢󠁳󠁣󠁴󠁿🇸🇦🇺🇸🇲🇽🇨🇭🇩🇰🇳🇴🇸🇪🇷🇸🇨🇿🇭🇷🇧🇷🇦🇷🇺🇾🇯🇵🇰🇷🇵🇱🇬🇷🇺🇦🇷🇺🇮🇱🇨🇴🇪🇨🇵🇾🇨🇱<br>
         • Second Division : 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷</p>
 
 
@@ -287,7 +286,7 @@ font-size: 21px
 	• Index Scores, Rank, AI Chat : 2023/24<br>
         <h3>Minutes</h3>
         <p> • Minimum 1000 minutes<br>
-            • Minimum 400 minutes for calendar season 2024</p>
+            • Minimum 420 minutes for calendar season 2024</p>
     
 
 </div>
@@ -374,6 +373,11 @@ font-size: 21px
       <li>Czech Republic Fortuna Liga</li>
       <li>Serbia Superliga</li>
       <li>Croatia HNL</li>
+      <li>Poland Ekstraklasa</li>
+      <li>Israel Ligat HaAl</li>
+      <li>Greece Super League</li>
+      <li>Russia Premier League</li>
+      <li>Ukraine VBET League</li>
       <li>Turkey Süper Lig</li>
       <li>Saudi Pro League</li>
       <li>Japan J1 League</li>
@@ -383,6 +387,10 @@ font-size: 21px
       <li>Brazil Serie A</li>
       <li>Argentina Primera Division</li>
       <li>Uruguay Primera Division</li>
+      <li>Ecuador LigaPro</li>
+      <li>Colombia Primera A</li>
+      <li>Paraguay First Division</li>
+      <li>Chile Primera Division</li>
       <li>England Championship</li>
       <li>Spain Segunda Division</li>
       <li>Italy Serie B</li>
