--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ font-size: 21px
             font-size: 18px;
             text-align: center;
             color: #8e8a8a;
-            line-height: 35px;
+            height: 35px;
             
         }
 
@@ -127,7 +127,7 @@ font-size: 21px
             font-size: 18px;
             text-align: center;
             color: #8e8a8a;
-            line-height: 35px;
+            height: 35px;
             
         }
   
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>new leagues 🇨🇴🇨🇱🇪🇨🇵🇾🇬🇷🇮🇱🇺🇦🇷🇺🇵🇱</div></th>
+        <tr><th><div>new leagues 🌎</div></th>
         </tr>
     </thead>
     <tbody>
@@ -226,7 +226,7 @@ font-size: 21px
 
 <table id="customTable11" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 <thead>
-    <tr><th><div><a href="https://datamb.football/glossary" target="_blank" rel="noopener noreferrer">Free radar glossary</a></div></th>
+    <tr><th><div><a href="https://datamb.football/glossary" target="_blank" rel="noopener noreferrer">radar glossary</a></div></th>
     </tr>
 </thead>
 <tbody>
