--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ font-size: 21px
       customTableBody13.appendChild(tr13);
   });
 
-  const customRows14 = ["Colombia, Chile, Ecuador, Paraguay, Greece, Israel, Ukraine, Russia and Poland are now available on all tools"];
+  const customRows14 = ["Colombian, Chilean, Ecuadorian, Paraguayan, Greek, Israeli, Ukrainian, Russian and Polish first divisions are now available on all tools"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
