--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>coming soon : 2024/25 📅</div></th>
+        <tr><th><div>2024/25 coming soon 📅</div></th>
         </tr>
     </thead>
     <tbody>
