--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>2024/25 coming soon 📅</div></th>
+        <tr><th><div>2024/25 update 📅</div></th>
         </tr>
     </thead>
     <tbody>
@@ -461,7 +461,7 @@ font-size: 21px
       customTableBody13.appendChild(tr13);
   });
 
-  const customRows14 = ["Awaiting larger sample size for more accurate update"];
+  const customRows14 = ["2024/25 added to Radars — Other tools will follow soon"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
