--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>2024/25 update 📅</div></th>
+        <tr><th><div>2024/25 UPDATE 📅</div></th>
         </tr>
     </thead>
     <tbody>
@@ -227,7 +227,7 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 07.09.2024</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 11.09.2024</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <table id="customTable" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
@@ -461,7 +461,7 @@ font-size: 21px
       customTableBody13.appendChild(tr13);
   });
 
-  const customRows14 = ["2024/25 added to Radars — Other tools will follow soon"];
+  const customRows14 = ["2024/25 data added to Radars, Teams, Plots and Searrch"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
