--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ font-size: 21px
   
   <table id="customTable13" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>in-app support 📱</div></th>
+        <tr><th><div><a href="https://datamb.football/tos" target="_blank" rel="noopener noreferrer">2024/25 INDEX AND RANKS</a>/div></th>
         </tr>
     </thead>
     <tbody>
@@ -461,7 +461,7 @@ font-size: 21px
       customTableBody13.appendChild(tr13);
   });
 
-  const customRows14 = ["2024/25 data added to Radars, Teams, Plots and Searrch"];
+  const customRows14 = ["2024/25 data added to Radars, Teams, Plots and Search"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
