--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ font-size: 21px
   
   <table id="customTable13" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div><a href="https://datamb.football/tos" target="_blank" rel="noopener noreferrer">2024/25 INDEX AND RANKS</a>/div></th>
+        <tr><th><div><a href="https://datamb.football/tos" target="_blank" rel="noopener noreferrer">2024/25 INDEX & RANKS 🔗</a></div></th>
         </tr>
     </thead>
     <tbody>
@@ -450,7 +450,7 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-  const customRows13 = ["DataMB Pro is now available on the iOS and Android applications"];
+  const customRows13 = [""];
   const customTableBody13 = document.querySelector("#customTable13 tbody");
 
   customRows13.forEach(text => {
