--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>2024/25 UPDATE 📅</div></th>
+        <tr><th><div>new season 📅</div></th>
         </tr>
     </thead>
     <tbody>
@@ -450,18 +450,9 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-  const customRows13 = [""];
-  const customTableBody13 = document.querySelector("#customTable13 tbody");
 
-  customRows13.forEach(text => {
-      const tr13 = document.createElement("tr");
-      const td13 = document.createElement("td");
-      td13.textContent = text;
-      tr13.appendChild(td13);
-      customTableBody13.appendChild(tr13);
-  });
 
-  const customRows14 = ["2024/25 data added to Radars, Teams, Plots and Search"];
+  const customRows14 = ["2024/25 data added to Radars, Teams, Plots & Search. Rank and Index tools available on the link below."];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
