--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>new season 📅</div></th>
+        <tr><th><div>new season</div></th>
         </tr>
     </thead>
     <tbody>
@@ -450,7 +450,7 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-	  const customRows13 = ["2024/25 update available on the link above"];
+	  const customRows13 = ["2024/25 database available on the link above"];
   const customTableBody13 = document.querySelector("#customTable13 tbody");
 
   customRows13.forEach(text => {
