--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ font-size: 21px
   
   <table id="customTable13" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div><a href="https://datamb.football/tos" target="_blank" rel="noopener noreferrer">INDEX & RANKS 🔗</a></div></th>
+        <tr><th><div><a href="https://datamb.football/testing4" target="_blank" rel="noopener noreferrer">INDEX & RANKS 🔗</a></div></th>
         </tr>
     </thead>
     <tbody>
