--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-	  const customRows13 = ["2024/25 database available on the link above"];
+	  const customRows13 = ["2023/24 database available on the link above"];
   const customTableBody13 = document.querySelector("#customTable13 tbody");
 
   customRows13.forEach(text => {
@@ -462,7 +462,7 @@ font-size: 21px
   });
 
 
-  const customRows14 = ["2024/25 data added to Radars, Teams, Plots & Search"];
+  const customRows14 = ["2024/25 data available on all tools"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
