--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ font-size: 21px
         <thead>
             <tr>
                 <th class="mdl-data-table__cell--non-numeric"></th>
+                <th><div>24/25</div></th>		    
                 <th><div>2024¹</div></th>
                 <th><div>23/24</div></th>
                 <th><div>2023¹</div></th>
@@ -313,18 +314,18 @@ font-size: 21px
 
 <script>
   const rows = ["Radars", "Plots", "Search", "Ranks", "Index", "Chat²", "Free Radars³", "Team Radars³", "Team Plots³", "Profiles³"];
-  const columns = ["2024", "23/24", "2023", "22/23", "2022", "21/22"];
+  const columns = ["24/25", "2024", "23/24", "2023", "22/23", "2022", "21/22"];
   const data = {
-      "Radars": [1, 1, 1, 1, 1, 1],
-      "Plots": [1, 1, 1, 1, 0, 0],
-      "Search": [0, 1, 1, 1, 1, 0],
-      "Ranks": [1, 1, 0, 0, 0, 0],
-      "Index": [1, 1, 0, 0, 0, 0],
-      "Chat²": [0, 1, 0, 0, 0, 0],
-      "Free Radars³": [0, 1, 0, 1, 0, 0],
-      "Team Radars³": [0, 1, 0, 1, 0, 0],
-      "Team Plots³": [0, 1, 0, 0, 0, 0],
-      "Profiles³": [0, 1, 0, 0, 0, 0]
+      "Radars": [1, 1, 1, 1, 1, 1, 1],
+      "Plots": [1, 1, 1, 1, 0, 0, 0],
+      "Search": [1, 1, 1, 1, 0, 0, 0],
+      "Ranks": [1, 1, 0, 0, 0, 0, 0],
+      "Index": [1, 1, 0, 0, 0, 0, 0],
+      "Chat²": [1, 0, 0, 0, 0, 0, 0],
+      "Free Radars³": [1, 0, 1, 0, 0, 0, 0],
+      "Team Radars³": [1, 0, 1, 0, 0, 0, 0],
+      "Team Plots³": [1, 0, 0, 0, 0, 0, 0],
+      "Profiles³": [1, 0, 0, 0, 0, 0, 0]
   };
 
   const tableBody = document.querySelector("#leaguesTable tbody");
@@ -347,7 +348,7 @@ font-size: 21px
 
 
 
-  const customRows2 = ["¹ Calendar Leagues → 🇳🇴🇸🇪🇧🇷🇦🇷🇺🇾🇨🇴🇪🇨🇵🇾🇨🇱🇯🇵🇰🇷🇺🇸", "² Top 5 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷", "³ Free : Top 7 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹","Minimum 1000 minutes played, league-only", "Minimum 650 minutes played for 2024", ];
+  const customRows2 = ["¹ Calendar Leagues → 🇳🇴🇸🇪🇧🇷🇦🇷🇺🇾🇨🇴🇪🇨🇵🇾🇨🇱🇯🇵🇰🇷🇺🇸", "² Top 5 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷", "³ Free : Top 7 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹","Minimum 1000 minutes played, league-only", "Minimum 700 minutes for 2024", "Minimum 200 minutes for 24/25",];
   const customTableBody2 = document.querySelector("#customTable2 tbody");
 
   customRows2.forEach(text => {
