--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ font-size: 21px
   });
 
 
-  const customRows14 = ["2024/25 data available on all tools"];
+  const customRows14 = ["2024/25 data now available on all tools"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
