--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>plot tool 📈</div></th>
+        <tr><th><div>plots 📈</div></th>
         </tr>
     </thead>
     <tbody>
@@ -463,7 +463,7 @@ font-size: 21px
   });
 
 
-  const customRows14 = ["Added screenshots, third metric, league color, button to click all dots at once"];
+  const customRows14 = ["Added screenshots, third metric, league color, bulk click"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
