--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ font-size: 21px
   });
 
 
-  const customRows14 = ["Added screenshots, third metric, league color, bulk click"];
+  const customRows14 = ["Added screenshots, third metric, xG line, league color, bulk click"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
