--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ font-size: 21px
   
   <table id="customTable13" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div><a href="https://datamb.football/testing4">INDEX & RANKS 🔗</a></div></th>
+        <tr><th><div><a href="https://datamb.football/testing4">NEW METRICS 📊</a></div></th>
         </tr>
     </thead>
     <tbody>
@@ -451,7 +451,7 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-	  const customRows13 = ["2023/24 database available on the link above"];
+	  const customRows13 = ["31 new metrics available in Index tool. More information coming soon!"];
   const customTableBody13 = document.querySelector("#customTable13 tbody");
 
   customRows13.forEach(text => {
