--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ font-size: 21px
 </div>
 <br>
 <h1>
-    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 04.02.2025</i>  <span id="database-button">+</span></span>
+    <span onclick="toggleSection('database-section')">Database <i style="font-size: 17px;">Last updated 10.02.2025</i>  <span id="database-button">+</span></span>
 </h1>
 <div id="database-section" class="terms hidden">
     <table id="customTable" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
@@ -348,7 +348,7 @@ font-size: 21px
 
 
 
-  const customRows2 = ["¹ Calendar Leagues → 🇳🇴🇸🇪🇧🇷🇦🇷🇺🇾🇨🇴🇪🇨🇵🇾🇨🇱🇯🇵🇰🇷🇺🇸", "² Top 5 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷", "³ Free : Top 7 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹","Minimum 1000 minutes played, league-only", "Minimum 620 minutes for 24/25",];
+  const customRows2 = ["¹ Calendar Leagues → 🇳🇴🇸🇪🇧🇷🇦🇷🇺🇾🇨🇴🇪🇨🇵🇾🇨🇱🇯🇵🇰🇷🇺🇸", "² Top 5 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷", "³ Free : Top 7 Leagues → 🏴󠁧󠁢󠁥󠁮󠁧󠁿🇪🇸🇮🇹🇩🇪🇫🇷🇳🇱🇵🇹","Minimum 1000 minutes played, league-only", "Minimum 650 minutes for 24/25",];
   const customTableBody2 = document.querySelector("#customTable2 tbody");
 
   customRows2.forEach(text => {
@@ -451,7 +451,7 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-	  const customRows13 = ["31 new metrics available in Index tool. More information coming soon!"];
+	  const customRows13 = ["60 new metrics available in Plot & Index tools!"];
   const customTableBody13 = document.querySelector("#customTable13 tbody");
 
   customRows13.forEach(text => {
