--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 21px
 <div id="news-section" class="terms hidden">
    <table id="customTable14" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div>plots 📈</div></th>
+        <tr><th><div>NEW METRICS 📊</div></th>
         </tr>
     </thead>
     <tbody>
@@ -175,7 +175,7 @@ font-size: 21px
   
   <table id="customTable13" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div><a href="https://datamb.football/testing4">NEW METRICS 📊</a></div></th>
+        <tr><th><div><a href="https://x.com/DataMB_/status/1889365850010034420"></a>RANK (WORLD) 🌎</div></th>
         </tr>
     </thead>
     <tbody>
@@ -451,7 +451,7 @@ font-size: 21px
       customTableBody11.appendChild(tr11);
   });
 
-	  const customRows13 = ["60 new metrics available in Plot & Index tools!"];
+	  const customRows13 = ["You can now rank players against All Leagues"];
   const customTableBody13 = document.querySelector("#customTable13 tbody");
 
   customRows13.forEach(text => {
@@ -463,7 +463,7 @@ font-size: 21px
   });
 
 
-  const customRows14 = ["Added screenshots, third metric, xG line, league color, bulk click"];
+  const customRows14 = ["60 new metrics available in Plot & Index tools!"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
