--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ font-size: 21px
   
   <table id="customTable13" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
-        <tr><th><div><a href="https://x.com/DataMB_/status/1889365850010034420"></a>RANK (WORLD) 🌎</div></th>
+        <tr><th><div><a href="https://x.com/DataMB_/status/1889365850010034420">RANK (WORLD) 🌎</a></div></th>
         </tr>
     </thead>
     <tbody>
