--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ font-size: 21px
   });
 
 
-  const customRows14 = ["60 new metrics available in Plot & Index tools!"];
+  const customRows14 = ["60 new metrics available in Plot, Index, and Rank tools"];
   const customTableBody14 = document.querySelector("#customTable14 tbody");
 
   customRows14.forEach(text => {
