--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
         
                     <h5>Possession</h5>
                     <ul>
-                        <li><strong>Touches</strong><i> (per 90)</i><br>Number of times the player has possession of the ball. Also refered to as Possessions, Ball possessions.</li>
+                        <li><strong>Touches</strong><i> (per 90)</i><br>Number of times the player has possession of the ball. Also refered to as Possessions, Ball possessions.</li><br>
                         <li><strong>Passes received</strong><i> (per 90)</i><br>Number of times the player receives a pass from a teammate.</li><br>
                         <li><strong>Duels</strong><i> (per 90)</i><br>Amount of duels contested, both with and without the ball.</li><br>
                         <li><strong>Duels won</strong><i> (per 90)</i><br>Amount of duels won.</li><br>
